--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 /* App.css */
-
+body,html {
+  height: 100%;
+  margin: 0;
+  background-color: darkslategrey;
+}
 .App {
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -49,9 +54,10 @@
 .players-cards-container {
   width: 200px; /* Set fixed width for the player card container */
   padding: 10px;
-  border: 1px solid #ddd;
+  border: 1px solid #291616;
   border-radius: 10px;
-  background-color: #f5f5f5;
+  background-color: darkslategrey;
+
 }
 
 /* Player-specific styling */
