--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,8 @@ body,html {
 
 .game-container {
   display: flex;
-  justify-content: space-between; /* Ensure children are spaced evenly */
+  justify-content: center; /* Ensure children are spaced evenly */
+  gap: 100px;
   align-items: center; /* Align items vertically at the center */
   width: 100%; /* Take full width of the page */
   padding: 20px;
@@ -60,15 +61,33 @@ body,html {
 
 }
 
+
+
 /* Player-specific styling */
 .red-player {
   display: flex;
   flex-direction: column;
   align-items: center;
+  border: 2px solid red;
 }
 
 .blue-player {
   display: flex;
   flex-direction: column;
   align-items: center;
+  border: 2px solid blue;
+}
+
+.players-card-container.blue-player{
+
+}
+
+.blue{
+  color: blue;
+  font-weight: bold;
+}
+
+.red{
+  color: red;
+  font-weight: bold;
 }
